# merge_photos

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py  settings.py
app/api/: constructor.py  lifespan.py
app/image_utils/: __init__.py  tiffmaker.py
app/misc/: __init__.py  exceptions.py  schemas.py
app/yandex/: __init__.py  image_downloader.py  yandex_api.py
nginx/: nginx.conf
static/: index.html
